Inhalt ohne Nummerierung, LAR besser, Verbesserunsvorschläge eingebaut.

--- a/slides.tex
+++ b/slides.tex
@@ -1,125 +1,82 @@
-\documentclass[ddcfooter]{tudbeamer}
+\documentclass[ddcfooter,nosectionnum]{tudbeamer}
 \usepackage{german}
 \usepackage{graphicx}
-\usepackage{caption}
+
 \usepackage{listings}
 \usepackage{setspace}
 \usepackage{array}
+\usepackage{wrapfig}
 
-\usetheme{Antibes}
+
 
 
 \usepackage{fontspec}
 \usepackage{xltxtra}
-\setmainfont{Univers}
+\setmainfont{Ubuntu}
 \setmonofont{Courier}
-\setromanfont{Univers}
+\setromanfont{Ubuntu}
 \setsansfont{Ubuntu}
 
 \begin{document}
 
 \einrichtung{Fakultät Informatik\hspace{6cm} Institut für Systemarchitektur}
-\title[Speicherverwaltung in Linux]{Vortrag im Proseminar Betriebssysteme:\vfill Speicherverwaltung in Linux}
+\title[Speicherverwaltung in Linux]{Speicherverwaltung in Linux}
+\subtitle{Proseminar Betriebssysteme}
 \author{Rebecca Kratsch}
 
 \date{10.05.2013}
 
 \maketitle
-
-
+	
 
 \begin{frame}
     \frametitle{Inhalt}
-    \begin{itemize}
-	\item Grundlegende Konzepte
-	\item Verwaltung des physischen Speichers
-	\begin{itemize}
-	    \item Speicherbelegung am Beispiel des Buddy-Algorithmus
-	\end{itemize}
-	    \item Repräsentation des virtuellen Speichers
-	\begin{itemize}
-	    \item Paging
-	    \item Seitenersetzungsalgorithmus
-	\end{itemize}
-    \end{itemize}
+	\tableofcontents
 \end{frame}
 
 
 
-\section{Grundlegendes}
-\begin{frame} 
-    \frametitle{Grundlegendes}
-    
-    Bild zu Thema fehlt noch\\
-    
-    \begin{itemize}
-    	\item Stack: 
-		\begin{itemize}
-			\item Umgebungsvariablen, Kommandozeile
-			\item veränderbar
-		\end{itemize}
-	\item Datensegment: (Bild : BSS und Daten) 
-		\begin{itemize}
-			\item initialisierte Daten    
-			\item uninitialisierte Daten ( Verweis auf Zeropage)
-		\end{itemize}
-	\item Textsegment: 
-		\begin{itemize}
-			\item Maschinenbefehle
-			\item nur lesender Zugriff
-			\item keine Größenänderung mögl. 
-		\end{itemize}
-    \end{itemize}
-   
-%\renewcommand{\arraystretch}{1.2}
-%{\tiny
-%\begin{tabular}{ | c | c | m{5cm} |}
-    %	\cline{1-1} \cline{3-3} 
-	%Stack &  &   \\ \cline{1-1} \cline{3-3}
-	    %  &  &   \\ \cline{1-1} \cline{3-3}               &  &   \\ \cline{1-1} \cline{3-3}
-	  %    &  &   \\ \cline{1-1} \cline{3-3}
-	      %&  &   \\ \cline{1-1} \cline{3-3}
-            %  &  &   \\ \cline{1-1} \cline{3-3}
-	    %  &  &   \\ \cline{1-1} \cline{3-3}
-	  %    &  &   \\ \cline{1-1} \cline{3-3}
-	      %&  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	      &  &   \\ \cline{1-1} \cline{3-3}
-%	BSS   &  &   \\ \cline{1-1} \cline{3-3} 
-%	Daten &  &   \\ \cline{1-1} \cline{3-3}    
-%	Daten &  &   \\ \cline{1-1} \cline{3-3} 
-%	Text  &  &   \\ \cline{1-1} \cline{3-3}  
-%	
-%    \end{tabular}
-%}
-%\renewcommand{\arraystrech}{1}
-
+\section{Grundlagen}
+\begin{frame}
+	\frametitle{Grundlagen}
+    \framesubtitle {Gliederung eines Linux-Prozess-Adressraumes }
+	
+		\begin{table}[ht]
+		\centering
+			\begin{tabular}{*{2}{m{0.5\textwidth}}}
+			\includegraphics[width = 3cm]{folie_1.eps} &
+			\begin{itemize}
+		 		\item Stack:  
+				\begin{itemize}
+					\item Umgebungsvariablen, Kommandozeile, lokale Variablen
+					\item veränderbar
+				\end{itemize}  	
+				\item Datensegment:  
+				\begin{itemize}
+					\item initialisierte Daten    
+					\item uninitialisierte Daten ( Verweis auf Zeropage)
+				\end{itemize}
+				\item Textsegment: 
+				\begin{itemize}
+					\item Maschinenbefehle
+					\item nur lesender Zugriff
+					\item keine Größenänderung mögl. 
+				\end{itemize}
+    		\end{itemize}
+%&\includegraphics[width=4cm]{folie_1.eps}
+			\end{tabular}
+			\label{tab:gt}
+		\end{table}
 \end{frame}
 
-\begin{frame} 
-    \frametitle{Grundlegendes}
-    \framesubtitle{Shared Text Segment}
-    
-    Grafik....
-    
-    
-    
-    
-\end{frame}
 
 \begin{frame} 
-    \frametitle{Grundlegendes}
+    \frametitle{Grundlagen}
     \framesubtitle{Memory-Mapped-Dateien}
-    
+    \begin{figure}[p]  
     \includegraphics[width=9cm]{segmente.eps}
-    
-    
-    
-    
+    \caption{Kao,O.; Vorlesung Betriebssysteme; Universität Paderborn; 2005)} 
+     \end{figure}
 \end{frame}
 
 \section{Implementierung der Speicherverwaltung}
@@ -141,7 +98,7 @@
     \frametitle{noch unklar}
    
    \begin{itemize}
-         		\item Seitendekriptor
+         		\item Seitendeskriptor
 		\item Zonendeskriptor
 		\item Knotendeskriptor\\
 			
@@ -156,21 +113,21 @@
 
 
 
-\section{Systemaufrufe}
-\begin{frame}
-    \frametitle{Systemaufrufe zur Speicherverwaltung}
-   
-    \begin{center}
-   	 \begin{tabular}{ | l |m{5cm} |}
-   	 \hline
-   	 Systemaufruf & Beschreibung \\ \hline
-    	s= brk(addr) & Datensegmentgröße ändern \\ \hline
-    	a = mmap(addr, len, prot, flags, fd, offset)&  Datei einblenden \\ \hline
-    	s = munmap(addr, len)  & Dateieinblendung beenden\\ \hline
-    	\end{tabular}
-    \end{center} 
-       
-\end{frame}
+%\section{Systemaufrufe}
+%\begin{frame}
+%    \frametitle{Systemaufrufe zur Speicherverwaltung}
+%   
+%    \begin{center}
+%   	 \begin{tabular}{ | l |m{5cm} |}
+%   	 \hline
+%   	 Systemaufruf & Beschreibung \\ \hline
+%    	s= brk(addr) & Datensegmentgröße ändern \\ \hline
+%    	a = mmap(addr, len, prot, flags, fd, offset)&  Datei einblenden \\ \hline
+%    	s = munmap(addr, len)  & Dateieinblendung beenden\\ \hline
+%    	\end{tabular}
+%    \end{center} 
+%       
+%\end{frame}
 
 
 
@@ -178,38 +135,45 @@
 
 \section{virtueller Speicher}
 \begin{frame}
-    \frametitle{Repräsentation des virtuellen Adressraumes}
-    \framesubtitle{Grundlegendes}
+    \frametitle{Virtueller Adressraum}
     \begin{itemize}
          \item   Unterteilung in homogene, zusammenhängende, an Seitengrenzen ausgerichtete 			Regionen
          \item fixe Seitengröße, erweiterbar durch PAE
-         \item Beschreibung jedes Kernbereichs mit \texttt{vm\_area\_struct}-Eintrag 
-         \begin{itemize}
-         		\item sortiert und zusammengefasst nach virtueller Adresse\\
-		\item enthält Eigenschaften (Schutzrechte...)
-			--> Realisiserung Copy- on-Write
-		\item Angaben über Hintergrundspeicher
-    		\item Zugriff auf alle Elemenete eines Adressraumes via Speicher-Deskriptor
-		\begin{itemize}
-			\item verkette Liste
-			\item binärer Rot-Schwarz-Baum
-		\end{itemize}
-   	\end{itemize} 
+        
      \end{itemize}
     
 \end{frame}
 
-%\section{virtueller Speicher}
+
+\section{virtueller Speicher}
 \begin{frame}
-    \frametitle{Repräsentation des virtuellen Adressraumes}
+    \frametitle{Virtuellen Adressraum}
+    \begin{itemize}
+    	    \item Beschreibung jedes Kernbereichs mit \texttt{vm\_area\_struct}-Eintrag 
+   		\begin{itemize}
+			 \item sortiert und zusammengefasst nach virtueller Adresse\\
+			\item enthält Eigenschaften (Schutzrechte...)
+			--> Realisiserung Copy- on-Write
+			\item Angaben über Hintergrundspeicher
+    			\item Zugriff auf alle Elemenete eines Adressraumes via Speicher-Deskriptor
+			\begin{itemize}
+				\item verkettete Liste
+				\item binärer Rot-Schwarz-Baum
+			\end{itemize}
+   		\end{itemize} 
+	\end{itemize}
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Virtueller Adressraumes}
     \framesubtitle {Paging in Linux}
     \begin{itemize}
          \item  Grundeinheit: Seite
          \item Grundidee / Definition Paging: \\
         \begin{quote}
-         \textquotedblleft
-         Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.
-    	\textquotedblright \footnote {EHSES, E. u.a. : Betriebssysteme- Ein Lehrbuch mit Übungen zur   	Systemrogrammierung in UNIX/Linux. 3. Aufl. München: Pearson Studium Verlag, 2005, S.294  }
+         „Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.“
+         \footnote{EHSES, E. u.a. : Betriebssysteme- Ein Lehrbuch mit Übungen zur Systemrogrammierung in UNIX/Linux. 3. Aufl. München: Pearson Studium Verlag, 2005, S.294}
 	\end{quote}
  	
 	
@@ -221,7 +185,7 @@
 
 
 \begin{frame}
-    \frametitle{Repräsentation des virtuellen Adressraumes}
+    \frametitle{Virtueller Adressraum}
     \framesubtitle {Paging in Linux}
     \begin{itemize}
          \item Nutzung 4-stufiger Seitentabellen in Linux\\
@@ -236,21 +200,20 @@
 
 \begin{frame}
  
-    \frametitle {Repräsentation des virtuellen Adressraumes}
+    \frametitle {Virtueller Adressraum}
     
     \framesubtitle {Paging in Linux}
     \begin{itemize}
          \item  Grundeinheit: Seite
          \item Grundidee / Definition Paging: \\
         \begin{quote}
-         \textquotedblleft
-         Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.
-    	\textquotedblright 	\end{quote}
+         „Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.“
+     	 \end{quote}
  	 \item Nutzung 4-stufiger Seitentabellen in Linux
 	 \item Realisierung sowohl durch kern als auch durch Page-Daemon
 	 \item Demand - Paging - System unter Nutzung des Swap-Bereiches
 	 \begin{itemize}
-	 	\item Auslagerungspartition 
+	 	\item Auslagerungspartitionen 
 		\item Auslagerungsdateien
 	\end{itemize}
     
@@ -260,10 +223,10 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Repräsentation des virtuellen Adressraumes}\
+	\frametitle{Virtueller Adressraum}\
 	\framesubtitle {Der Seitenersetzungsalgorithmus}
  	\begin{itemize}
-		\item per Page Frame Reclaiming Algorithmn
+		\item per Page Frame Reclaiming Algorithmus
 		\item Unterscheidung von vier Seitenarten:
 	\end{itemize}	
 		
