--- a/slides.tex
+++ b/slides.tex
@@ -1,3 +1,4 @@
+% !TEX encoding = UTF-8 Unicode
 \documentclass[ddcfooter,nosectionnum]{tudbeamer}
 \usepackage{german}
 \usepackage{graphicx}
@@ -7,7 +8,7 @@
 \usepackage{wrapfig}
 \usepackage{fontspec}
 \usepackage{xltxtra}
-\usepackage[font=scriptsize,labelfont=bf]{caption}
+%\usepackage[font=tiny]{caption}
 
 \setmainfont{Ubuntu}
 \setmonofont{Courier}
@@ -37,11 +38,12 @@
     	\begin{itemize}
 			\item Physischer Speicher in Seiten strukturiert
 			\begin {itemize}
-				\item 32-bit Architektur meist 4Kb Seiten, 4 GB adressierbar				\item 64-bit Architektur meist 8Kb Seiten, 16 Exabyte adressierbar
+				\item 32-bit Architektur meist 4KB Seiten, 4GB adressierbar
+				\item 64-bit Architektur meist 8KB Seiten, 16EB adressierbar
     		\end{itemize}
 			\item Virtueller Adressraum je Prozess (auf 32-bit-Maschinen)
 			\begin {itemize}
-				\item 3 GB virtueller Adressraum: Text-, Daten-, BBS-Segment, Stack			\item 1 GB: Seitentabellen und andere Informationen des Kerns    			\end{itemize}
+				\item 3GB virtueller Adressraum: Text-, Daten-, BBS-Segment, Stack			\item 1GB: Seitentabellen und andere Informationen des Kerns    			\end{itemize}
     \end{itemize}
     \end{frame}
 
@@ -50,9 +52,7 @@
 	\frametitle{Grundlagen}
     \framesubtitle {Gliederung eines Linux-Prozess-Adressraumes }
 	
-		\begin{table}
-		\centering
-			\begin{tabular}{*{2}{m{0.6\textwidth}}}
+\begin{minipage}[b]{0.7\textwidth}
 			\begin{itemize}
 		 		\item Stack:  
 				\begin{itemize}
@@ -68,64 +68,57 @@
 				\begin{itemize}
 					\item Maschinenbefehle
 					\item nur lesender Zugriff
-					\item keine Größenänderung mögl. 
+					\item feste Größe 
 				\end{itemize}
     		\end{itemize}
-&\includegraphics[width = 1.8cm]{segmente.png}
-			\end{tabular}
-			\label{tab:gt}
-		\end{table}
+\end{minipage}
+%
+\begin{minipage}[b] {0.29\textwidth}
+\includegraphics[width=0.58\textwidth]{segmente.png}
+\end{minipage} 
 \end{frame}
 
 
-\begin{frame} 
-    \frametitle{Grundlagen}
-    \framesubtitle{Memory-Mapped-Dateien}
-    \begin{figure}[p]  
-    \includegraphics[width=9.3cm]{mmd.png}
-    \caption{ Kao, O.; Vorlesung Betriebssysteme; Universität Paderborn; 2005}
-     \end{figure}
-\end{frame}
-
-
+%\begin{frame} 
+%    \frametitle{Grundlagen}
+%    \framesubtitle{Memory-Mapped-Dateien}
+%    \begin{figure}[p]  
+%    \includegraphics[width=9.3cm]{mmd.png}
+%    \caption{ Kao, O.; Vorlesung Betriebssysteme; Universit√§t Paderborn; 2005}
+%     \end{figure}   
+%     
+%\end{frame}
 
 \section{Physischer Speicher}
 \begin{frame}
-    \frametitle{Verwaltung des Physischen Speichers}   
-   	  \begin{itemize}
-      	\item Unterscheidung von 3 Speicherzonen: 
-		\begin{description}
-					\item 1. ZONE\_DMA 
-					\item 2. ZONE\_NORMAL
-					\item 3. ZONE\_HIGHMEN
-				\end{description} 
-
-	  
-			
-			
-%			\begin{tabular}{*{2}{m{0.5\textwidth}}}
-%				\begin{description}
-%					\item 1. ZONE\_DMA 
-%					\item 2. ZONE\_NORMAL
-%					\item 3. ZONE\_HIGHMEN
-%				\end{description} &
-%			\begin{figure}
-%     
-%      \includegraphics[width=2.5cm]{zonen.png}
-%     \end{figure}
-%	\end{tabular}
-	
-	\item Arbeitsspeicher 3 Teile: 
-	\begin{itemize}
-		\item Kern
-		\item Speicherzuordnungtabelle
-		\item restlicher Anteil: Aufteilung in Seitenrahmen
-	\end{itemize}
-	\end{itemize}
+    \frametitle{Physischer Speicher}   
+    
+	\begin{minipage}[b]{0.7\textwidth} 
+		% \begin{description}
+		 	\begin{itemize}
+				\item 3 Speicherzonen: 
+				\begin{enumerate}	 	
+					\item ZONE\_DMA 
+					\item ZONE\_NORMAL
+					\item ZONE\_HIGHMEN
+				\end{enumerate}
+				\item Arbeitsspeicher 3 Teile: 
+				\begin{itemize}
+					\item Kern
+					\item Speicherzuordnungtabelle
+					\item restlicher Anteil: Aufteilung in Seitenrahmen
+				\end{itemize}
+			\end{itemize}
+		%\end{description}
+	\end{minipage}
+	%
+	\begin{minipage}[t]{0.29\textwidth}
+		\includegraphics[width=0.6\textwidth]{zonen.png}
+	\end{minipage}
 \end{frame}
 
 \begin{frame}
-	\frametitle{Verwaltung des Physischen Speichers}
+	\frametitle{Physischer Speicher}
     \begin{itemize}
     	\item Seitendeskriptoren
         \begin{itemize}
@@ -141,7 +134,7 @@
 		\item Knotendeskriptoren
 		\begin {itemize}
 			\item zur Differenzierung zwischen physischem Speicher auf verschiedenen Knoten	
-			\item Informationen über Speichernutzung und Zonen des speziellen Knotens
+			\item Informationen über Speichernutzung und Zonen eines speziellen Knotens
 		\end {itemize}			
    	\end{itemize} 
 
@@ -153,46 +146,46 @@
 \frametitle{Physischer Speicher}
 \framesubtitle{Mechanismen zur Speicherbelegung}
 	\begin{itemize}
-		\item Page Allocator unter Nutzung des Buddy-Algorithmus
-	\end{itemize}
-	\begin{figure}[p] 
-		\includegraphics[width=8.5cm]{buddy.png}
-		\caption{ Tanenbaum, A.; Moderne Betriebssysteme; 3. Auflage}
-\end{figure} 
+		\item<1-3> Speicherallokation unter Nutzung des Buddy-Algorithmus
+
+		\includegraphics<1-3>[width=7.5cm]{buddy.png}\\
+		\texttt{\tiny Quelle:Tanenbaum, A.; Moderne Betriebssysteme; 3. Auflage}\\
+		\pause
+	Problem: interne Fragmentierung\\ 
+	\item<2-3> Lösung: Slab-Allocator 
+	\item<3> Funktion \texttt{vmalloc}	
+	\end {itemize}	
 	
 \end{frame}	
-
-\begin{frame}
-\frametitle{Physischer Speicher}
-\framesubtitle{Mechanismen zur Speicherbelegung}
-	\begin{itemize}
-		\item Page Allocator unter Nutzung des Buddy-Algorithmus
-	
-	
-		\includegraphics[width=7.5cm]{buddy.png}\\
-		--> Problem: interne Fragmentierung\\
-		--> Lösung:  Slab-Allocator 
-		\item Funktion \texttt{vmalloc}
-	
-	\end{itemize}
-	
-\end{frame}	
-
-
-
 
 
 \section{Virtueller Speicher}
 \begin{frame}
     \frametitle{Virtueller Adressraum}
+    \framesubtitle {Paging in Linux}
+    \begin{itemize}
+         \item  Grundeinheit: Seite
+         \item Grundidee / Definition Paging: 
+          \end{itemize}
+        \begin{quote}
+          	\glqq Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.\grqq
+         \end{quote}
+         \texttt{\tiny Quelle:EHSES, E. u.a. : Betriebssysteme- Ein Lehrbuch mit Übungen zur Systemrogrammierung in UNIX/Linux. 3. Aufl. München: Pearson Studium Verlag, 2005, S.294}
+	    
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Virtueller Adressraum}
+    \framesubtitle {Paging in Linux}
     \begin{itemize}
     	    \item Beschreibung jedes Kernbereichs mit \texttt{vm\_area\_struct}-Eintrag 
    		\begin{itemize}
 			 \item sortiert und zusammengefasst nach virtueller Adresse\\
 			\item enthält Eigenschaften (Schutzrechte...)
-			--> Realisiserung Copy- on-Write
+			--> Realisierung Copy- on-Write
 			\item Angaben über Hintergrundspeicher
-    			\item Zugriff auf alle Elemenete eines Adressraumes via Speicher-Deskriptor
+    			\item Zugriff auf alle Elemenete eines Adressraums via Speicher-Deskriptor
 			\begin{itemize}
 				\item verkettete Liste
 				\item binärer Rot-Schwarz-Baum
@@ -202,32 +195,18 @@
     
 \end{frame}
 
-\begin{frame}
-    \frametitle{Virtueller Adressraumes}
-    \framesubtitle {Paging in Linux}
-    \begin{itemize}
-         \item  Grundeinheit: Seite
-         \item Grundidee / Definition Paging: \\
-        \begin{quote}
-         „Paging ist ein Speicherverwaltungsverfahren, das auf der Strukturierung  des virtuellen Speichers 	in Seiten und der Strukturierung des realen Speichers in Seitenrahmen beruht.“
-         \footnote{EHSES, E. u.a. : Betriebssysteme- Ein Lehrbuch mit Übungen zur Systemrogrammierung in UNIX/Linux. 3. Aufl. München: Pearson Studium Verlag, 2005, S.294}
-	\end{quote}
- \end{itemize}
-    
-\end{frame}
-
 
 \begin{frame}
     \frametitle{Virtueller Adressraum}
     \framesubtitle {Paging in Linux}
     \begin{itemize}
-         \item Nutzung eines 4-stufigen Paging-Verfahrens
-        
-    \end{itemize}
-    \begin{figure}[p]  
-    \includegraphics[width=8.3cm]{vierstufiges.png}
-    \caption{ Tanenbaum, A; Moderne Betriebssysteme; 3. Auflage}
-     \end{figure}
+         \item Nutzung eines 4-stufigen Paging-Verfahrens        
+   
+   %\begin{figure}[p]  
+    \includegraphics[width=8cm]{vierstufiges.png}\\
+    \texttt{\tiny Quelle:Tanenbaum, A.; Moderne Betriebssysteme; 3. Auflage}\\
+    %\end{figure}
+     \end{itemize}
 \end{frame}
 
 
@@ -238,7 +217,7 @@
     \framesubtitle {Der Seitenersetzungalgorithmus}
     \begin{itemize}
        
-	 \item Realisierung durch Page-Daemon \texttt{kswpd}
+	 \item Realisierung durch Page-Daemon \texttt{kswpd} und \texttt{pdflush}
 	 \item Demand-Paging-System unter Nutzung des Swap-Bereiches
 	 \begin{itemize}
 	 	\item Auslagerungspartitionen 
@@ -265,10 +244,10 @@
     	\item gradlinig, architekturunabhängig --> hohe Portabilität durch:
 		\begin{itemize}
 			\item Memory Zones
-			\item wenig Verschnitt durch Buddyalgorithmus und Slab-Allocator
-			\item schnell per-CPU page frame cache, slab caches
+			\item wenig Verschnitt durch Buddyalgorithmus und Slab-Allocator 			\item Paging
+			\item Seitenersetzungsalgorithmus
 		\end{itemize}
-    \end{itemize}
+	 \end{itemize}
     
 \end{frame}
 
@@ -282,7 +261,7 @@
 	\item	 UNIX - Wie funktioniert das Betriebssystem? \\
 		Maurice J. Bach - 1991
 	\item Betriebssysteme\\
-		Ein Lehrbuch mit Übungen zur Systemprogrammierung in UNIX/ Linux \\
+		Ein Lehrbuch mit √úbungen zur Systemprogrammierung in UNIX/ Linux \\
 		E. Ehses, L. Köhler, P. Riemer, H. Stenzel, F. Victor - 2010	
     \end{itemize}
     
