vorläufige Endfassung mit Brücke.

--- a/slides.tex
+++ b/slides.tex
@@ -267,6 +267,12 @@
     
 \end{frame}
 
+\begin{frame}
+
+	\includegraphics[width= 0.9\textwidth]{br_logo_blau.png}
+
+  \end{frame}
+
 \end{document}
 
 
