--- a/slides.tex
+++ b/slides.tex
@@ -261,7 +261,7 @@
 	\item	 UNIX - Wie funktioniert das Betriebssystem? \\
 		Maurice J. Bach - 1991
 	\item Betriebssysteme\\
-		Ein Lehrbuch mit √úbungen zur Systemprogrammierung in UNIX/ Linux \\
+		Ein Lehrbuch mit Übungen zur Systemprogrammierung in UNIX/ Linux \\
 		E. Ehses, L. Köhler, P. Riemer, H. Stenzel, F. Victor - 2010	
     \end{itemize}
     
